# tab_err

./:  .readthedocs.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  samples.ipynb
.github/workflows/: mypy.yaml  publish.yaml  ruff.yaml  tests.yaml
dev_testing/: High_Level_Test.ipynb  clean_beers.csv
docs/: .readthedocs.yaml  Makefile  requirements.txt
docs/source/: conf.py  index.md  index.rst
error_generation/: error_generator.py  samples.ipynb
error_generation/api/: low_level.py  mid_level.py
error_generation/error_mechanism/: _base.py  _ear.py  _ecar.py  _enar.py
error_generation/error_type/: __init__.py  _base.py  add_delta.py  butterfinger.py  clipping.py  extraneous.py  mislabel.py  missing.py  mistype.py  mojibake.py  outlier.py  permutate.py  replace.py  wrong_unit.py
error_generation/utils/: __init__.py  utils.py
examples/: 1-Getting-Started.ipynb  APITest.ipynb  Error_Types.ipynb  High_Level_Test.ipynb  ML_Model_Test.ipynb
tab_err/: __init__.py  _error_model.py  _utils.py  hla_test_conf.yaml
tab_err/api/: high_level.py  low_level.py  mid_level.py
tab_err/error_mechanism/: _base.py  _ear.py  _ecar.py  _enar.py  _error_mechanism.py
tab_err/error_type/: __init__.py  _add_delta.py  _base.py  _category_swap.py  _config.py  _error_type.py  _extraneous.py  _missing.py  _mistype.py  _mojibake.py  _outlier.py  _permutate.py  _replace.py  _typo.py  _wrong_unit.py  butterfinger.py  mislabel.py  mistype.py  permutate.py  typo.py
tab_err/utils/: utils.py
tests/: conftest.py  test_high_level.py  test_low_level.py
tests/api/: test_high_level_api.py  test_low_level_api.py
tests/error_mechanism/: test_high_level.py
tests/error_type/: test_typo.py
